fix: Move CD down slightly on mobile

--- a/style.css
+++ b/style.css
@@ -1553,7 +1553,7 @@ body {
   .layer-3 {
     width: 60%;
     height: 60%;
-    top: 30%;
+    top: 32%;
   }
 }
 
